--- a/1.2-requests-templates/pagination/stations/templates/stations/index.html
+++ b/1.2-requests-templates/pagination/stations/templates/stations/index.html
@@ -31,7 +31,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for station in bus_stations %}
+            {% for station in page %}
                 <tr>
                     <td>{{ station.Name }}</td>
                     <td>{{ station.Street }}</td>
@@ -40,6 +40,7 @@
             {% endfor %}
             </tbody>
         </table>
+
 
         {% if page.has_previous %}
             <a class="button button-primary" href="?page={{ page.previous_page_number }}">⟵</a>
