--- a/2.1-databases/models_list_displaying/templates/base.html
+++ b/2.1-databases/models_list_displaying/templates/base.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    {% block content %}{% endblock %}
+    {% block content %}БИБЛИОТЕКА{% endblock %}
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
